fixed gephi open ord integration